<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">农产品质量安全监测</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="crop_save_text" msgid="8140440041190264400">"保存"</string>
    <string name="crop_rotate_text">旋转</string>
    <string name="crop_discard_text" msgid="5303657888280340603">"舍弃"</string>
    <string name="runningFaceDetection">请稍后...</string>
    <string name="login_tittle">江苏农产品质量安全监测信息系统</string>
    <string name="lable_user">帐号</string>
    <string name="lable_pwd">密码</string>
    <string name="lable_save_user">记住帐号</string>
    <string name="lable_login">登录</string>
    <string name="label_dcode">条码:</string>
    <string name="all">全部</string>
    <string name="group">分组</string>
    <string name="download_all_data">下载所有数据</string>
    <string name="msg_loading_all_data">正在下载所有数据,请稍后...</string>
    <string name="back">返回</string>
    <string name="delete">删除</string>
    <string name="detail">详细信息</string>
    <string name="go_on">继续执行</string>
    <string name="task_name">任务名称</string>
    <string name="user_name">用户名：</string>
    <string name="cur_city">当前机构：</string>
    <string name="change_pwd">修改密码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="commit_pwd">确认密码</string>
    <string name="app_info">系统版本</string>
    <string name="logout">退出当前账号</string>
    <string name="preferences_scanning_title">当扫描条形码</string>
    <string name="preferences_decode_1D_title">解码一维条码</string>
    <string name="preferences_decode_QR_title">解码QR条码</string>
    <string name="preferences_decode_Data_Matrix_title">数据矩阵码解码</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_custom_product_search_summary" formatted="false">使用％s作为产品ID占位</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_front_light_summary">使前灯如果可用</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存许多条形码</string>
    <string name="do_seach">输入</string>
    <string name="get_coordinate">获取</string>
    <string name="get_coordinate_detail">获取坐标</string>
    <!-- 历史 -->
    <string name="msg_unmount_usb">对不起，SD卡是不可访问。</string>
    <string name="button_ok">确定</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_send">发送历史</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_title">历史</string>
    <!-- 界面 -->
    <string name="msg_default_format">格式</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_meta">元数据</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="msg_default_status">镜头范围内进行扫描。  </string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">散装模式：条码扫描，并保存</string>
    <string name="msg_camera_framework_bug">很抱歉，机器人相机出现问题。您可能需要重新启动设备。</string>
    <!-- result -->
    <string name="msg_confim_delete">删除操作不可恢复，是否删除?</string>
    <string name="msg_confim_commit">提交操作一旦开始不可手动停止，是否继续提交?</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_loading_longin">正在登录...</string>
    <string name="msg_loading_data">正在加载...</string>
    <string name="msg_commit_sample">抽样单提交中...</string>
    <string name="msg_extends_monintring_Site">正在展开所有受检单位({0}/{1})</string>
    <string name="msg_extends_breed_list">正在展开所有抽样品种</string>
    <string name="msg_uploading_img">正在上传样品图片，共{0}张...(图片可能上传较慢，请耐心等待)</string>
    <string name="msg_check_dCode">正在检查条码({0}/{1})</string>
    <string name="msg_least_one_sub">至少要有一张子表信息</string>
    <string name="msg_morest_15_sub">至多可以有15张子表信息</string>
    <string name="msg_no_project">当前没有正在进行的项目</string>
    <string name="msg_loading_breed_data">正在获取抽样品种...</string>
    <string name="msg_login_error">用户名密码错误</string>
    <string name="msg_login_faild">网络异常，登录失败</string>
    <string name="msg_load_faild">网络异常，请求失败</string>
    <string name="msg_net_error">网络连接异常,请检查网络设置</string>
    <string name="msg_net_error_retry">网络连接异常,请重试</string>
    <string name="msg_host_no_response">服务器无响应或操作超时</string>
    <string name="msg_host_response_error">服务器返回异常</string>
    <string name="msg_load_data">所有数据已下载完毕</string>
    <string name="msg_load_no_data">没有相关数据</string>
    <string name="msg_cant_click">请在联网的情况下执行该操作!</string>
    <string name="msg_del_success">删除成功</string>
    <string name="msg_del_faild">删除失败</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_save_success">保存成功</string>
    <string name="text_input_empty">请输入用户名和密码</string>
    <string name="text_input_error">您输入的内容格式错误</string>
    <string name="msg_not_our_results">你离开此应用程序。搜索结果，您会看到的都没有涉及这个应用程序</string>
    <string name="msg_download_complete">所有数据下载完成!</string>
    <string name="result_text">找到纯文本</string>
    <string name="remark_text">备注名称</string>
    <string name="crop_next_text">下一步</string>
    <string name="for_sample">替抽</string>
    <string name="send">发送</string>
    <string name="forward_num_hint">请输入转发数量</string>
    <string name="done">确认</string>
    <string name="republic">发布单位</string>
    <string name="date_end__text">截至时间</string>
    <string name="sample_type_text">抽样品种</string>
    <string name="sample_area_text">抽样地区</string>
    <string name="sample_link_text">抽样环节</string>
    <string name="sample_unit_text">抽样单位</string>
    <string name="contact_text">联系人</string>
    <string name="fax_text">传真</string>
    <string name="detect_text">检测机构</string>
    <string name="sender">发送人</string>
    <string name="sample_num_text">抽象数量</string>
    <string name="add_sample_task">添加抽样信息</string>
    <string name="view_other_task">查看其他任务</string>
    <string name="receive_sample">待抽样</string>
    <string name="un_complete">未完成</string>
    <string name="has_complete_text">已完成</string>
    <string name="receiving_text">待接收</string>
    <string name="barcode">条码</string>
    <string name="re_scan">重新扫描</string>
    <string name="inspected_unit_text">受检单位</string>
    <string name="coordinate">经纬度</string>
    <string name="legal">法人或负责人</string>
    <string name="address">通讯地址</string>
    <string name="zip_code_text">邮政编码</string>
    <string name="tel">联系电话</string>
    <string name="business_nature_text">企业性质</string>
    <string name="business_scale_text">企业规模</string>
    <string name="head_unit_text">主管单位</string>
    <string name="product_class_text">产品类别</string>
    <string name="product_name_text">产品名称：</string>
    <string name="specification_text">规格型号</string>
    <string name="for_sample_num">替抽数量</string>
    <string name="cancel">取消</string>
    <string name="task_info">任务信息</string>
    <string name="sample_staff">抽样员</string>
    <string name="receiving_task">待接收任务</string>
    <string name="sample_info">抽样信息</string>
    <string name="sys_setting">系统设置</string>
    <string name="tittle_doing">执行中任务</string>
    <string name="tittle_done">已完成任务</string>
    <string name="lable_inspected_units">受检单位：</string>
    <string name="lable_product_name">样品名称：</string>
    <string name="lable_check_time">抽样时间：</string>
    <string name="get_photo">获取图片</string>
    <string name="camera_fetch">拍照获取</string>
    <string name="local_fetch">本地获取</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="result_email_address">Found email address</string>
    <string name="button_get_directions">Get directions</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="result_isbn">Found book</string>
    <string name="button_product_search">Product Search</string>
    <string name="button_web_search">Web search</string>
    <string name="result_product">Found product</string>
    <string name="forward">转发</string>
    <string name="picture_crop">图片裁剪</string>
    <string name="inspected_units">受检单位</string>
    <string name="fill_sample_info">填写抽样信息</string>
    <string name="commit">提交</string>
    <string name="project_list">项目列表</string>
    <string name="task_list">任务列表</string>
    <string name="msg_change_pwd_ok">修改成功，下次登录有效</string>
    <string name="msg_change_pwd_err">原密码输入错误</string>
    <string name="pull_to_refresh_pull_label">下拉即可刷新…</string>
    <string name="pull_to_refresh_release_label">松开即可刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="coordinate_error">经纬度错误,点击表单进行重新获取</string>
    <string name="add_sub_table">点击添加子表</string>
    <string name="view_sub_table">子表内容</string>
    <!-- 抽样单 -->
    <string name="lab_routine_monitoring">例行检查抽样单</string>
    <string name="lab_general_check">风险抽样单</string>
    <string name="lab_supervise_check">监督抽样单</string>
    <string name="lab_fresh_milk">生鲜乳抽样单</string>
    <string name="lab_livestock">畜禽抽样单</string>
    <string name="sampleDate">抽样时间</string>
    <string name="pleaseChoice">请选择</string>
    <string name="sampleUser">抽样人员</string>
    <string name="monitorLink">监测环节</string>
    <string name="sampleArea">抽样地点</string>
    <string name="samplePalce">抽样场所</string>
</resources>