<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sample_num"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_margin_top"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/tittle_bg"
        android:gravity="clip_horizontal"
        android:paddingLeft="@dimen/margin_left"
        android:text=""
        android:textSize="@dimen/font_small_size" />

    <RelativeLayout
        android:id="@+id/ll_sample_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sample_list_item_height"
        android:layout_marginLeft="@dimen/margin_left"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/sample_image"
            android:layout_width="@dimen/task_progress_height"
            android:layout_height="@dimen/task_progress_height"
            android:layout_centerVertical="true"
            android:src="@drawable/shoot" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_toRightOf="@+id/sample_image"
            android:layout_toLeftOf="@+id/layout_sample_list_btn"
            android:layout_marginTop="@dimen/title_font_margin_right"
            android:layout_marginBottom="@dimen/title_font_margin_right"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dcode"
                    android:textSize="@dimen/font_small_size" />

                <TextView
                    android:id="@+id/dcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/font_small_size" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_product_name"
                    android:textSize="@dimen/font_small_size" />

                <TextView
                    android:id="@+id/prodeuce_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/font_small_size" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_inspected_units"
                    android:textSize="@dimen/font_small_size" />

                <TextView
                    android:id="@+id/inspected_units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_left"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/font_small_size" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_check_time"
                    android:textSize="@dimen/font_small_size" />

                <TextView
                    android:id="@+id/check_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/font_small_size" />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:id="@id/layout_sample_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_left"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_del"
                android:layout_width="@dimen/task_progress_height"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/title_font_margin_right"
                android:background="@drawable/btn_red_selector"
                android:text="@string/delete"
                android:textColor="@color/gray"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_detail"
                android:layout_width="@dimen/task_progress_height"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/title_font_margin_right"
                android:background="@drawable/btn_green_selector"
                android:text="@string/detail"
                android:textColor="@color/gray" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>